--- a/package.json
+++ b/package.json
@@ -1,13 +1,25 @@
 {
   "name": "sarif-codeclimate",
-  "version": "1.0.2",
+  "version": "2.0.0",
   "description": "Convert your SARIF output into a readable JSON compatible with GitLab Code Climate Tool",
-  "main": "lib/converter.js",
+  "main": "out/lib/converter.js",
   "bin": {
-    "sarif-codeclimate": "./bin/sarif-codeclimate.js"
+    "sarif-codeclimate": "out/bin/sarif-codeclimate.js"
   },
+  "files": [
+    "out/"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --config jestconfig.json",
+    "start": "tsc && out/bin/sarif-codeclimate.js",
+    "build": "tsc",
+    "format": "prettier --write \"src/**/*.[tj]s\"",
+    "lint": "tslint -p tsconfig.json",
+    "prepare": "npm run build",
+    "prepublishOnly": "npm test && npm run lint",
+    "preversion": "npm run lint",
+    "version": "npm run format && git add -A src",
+    "postversion": "git push && git push --tags"
   },
   "repository": {
     "type": "git",
@@ -29,6 +41,17 @@
   "license": "MIT",
   "dependencies": {
     "colors": "^1.4.0",
+    "commander": "^10.0.0",
+    "crypto": "^1.0.1",
     "minimist": "^1.2.6"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.4.0",
+    "jest": "^29.4.0",
+    "prettier": "^2.8.3",
+    "ts-jest": "^29.0.5",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^4.9.4"
   }
 }
