--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,5 +15,6 @@ jobs:
     - run: npm ci
     - run: npm test
     - uses: JS-DevTools/npm-publish@v1
+      if: github.ref == 'refs/heads/main'
       with:
         token: ${{ secrets.NPM_TOKEN }}
