fix: revert script in package.json
Signed-off-by: GridexX <arsene582@gmail.com>

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sarif-codeclimate",
-  "version": "2.1.0",
+  "version": "2.1.1",
   "description": "Convert your SARIF output into a readable JSON compatible with GitLab Code Climate Tool",
   "main": "out/lib/converter.js",
   "bin": {
@@ -14,7 +14,12 @@
     "start": "tsc && out/bin/sarif-codeclimate.js",
     "build": "tsc",
     "format": "prettier --write \"src/**/*.[tj]s\"",
-    "lint": "tslint -p tsconfig.json"
+    "lint": "tslint -p tsconfig.json",
+    "prepare": "npm run build",
+    "prepublishOnly": "npm test && npm run lint",
+    "preversion": "npm run lint",
+    "version": "npm run format && git add -A src",
+    "postversion": "git push && git push --tags"
   },
   "repository": {
     "type": "git",
